fixing spacing at top of nav on mobile/tablet

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -9,7 +9,7 @@
   }
 }
 @mixin tablet{
-  @media(max-width:767px){
+  @media(max-width:835px){ // iPad Pro 11" size
     @content;
   }
 }
